text centered, need to make sure the alert covers up the cards

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@
 .alert {
 width: 100vw;
 height: 30vh;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 .btn {
